codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_reasoning_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 2350
expression: popup
---
  Select Reasoning Level for deepseek-v4-pro

  1. Low               Fast responses
  2. Medium (default)  Balanced reasoning
› 3. High (current)    Deep reasoning for complex problems

  Press enter to confirm or esc to go back
