codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_reasoning_selection_popup_extra_high_warning.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 2364
expression: popup
---
  Select Reasoning Level for glm-5.1

› 1. Low               Fast responses
  2. Medium (default)  Balanced reasoning
  3. High              Deep reasoning for complex problems

  Press enter to confirm or esc to go back
